--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_ACCESS_KEY=lv76-SZ39awnwtaCsRlRkuiI_ld2r0EL_LjHNvTOwl8
+REACT_APP_ACCESS_KEY=Get my access key from my unsplash account and paste it here
